--- a/meetTeam.html
+++ b/meetTeam.html
@@ -55,18 +55,7 @@
     </form>
   </div>
 </nav>
-<h1>Our Purpose</h1>
-<p>People go to sleep everyday without eating anything. We thought about what we could do to
-  influence such a prevalent problem. As a group we felt that while people focus on the broad
-  topic of world hunger, people often overlook those who need help around them.
-  Believe it or not, several people around us do need assistance. We realized we can change the world,
-  if we start small. It has happened all throughout history. Random acts of kindness can make a
-  difference regardless of how simple or grand that act may appear. World hunger is a broad topic
-  and hard to change on a global scope. Our purpose is to show how people can start small to benefit
-  those around them. Our team of four is very passionate and excited to influence such a major issue in society.
-  We want to get involved and hope that you will be interested in this cause as well.
-  Rather than talking about the world we will start small with our communities
-  and aspire to create change together. </p>
+<h1>Meet Our Team!</h1>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
