--- a/peerLead.html
+++ b/peerLead.html
@@ -16,11 +16,17 @@
       <li class="nav-item active">
         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="aboutPage.html">About</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          About
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="aboutPage.html">Our Purpose</a>
+          <a class="dropdown-item" href="meetTeam.html">Meet the Team</a>
+        </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="getInvolvedPage.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Get Involved
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -30,8 +36,14 @@
           <a class="dropdown-item" href="event.html">Upcoming Events</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="organizationPage.html">Organizations</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Organizations
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="organizationPage.html">List A-Z</a>
+          <a class="dropdown-item" href="map.html">Locations</a>
+        </div>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="contact.html">Contact</a>
