--- a/subscribe.html
+++ b/subscribe.html
@@ -7,9 +7,8 @@
 <body>
 
 <div id="myModal" class="modal">
-    <div class="modal-content">
+    <!-- <div class="modal-content"> -->
         <span class="close-button">×</span>
-        <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
 
         <div id="id01" class="modal2">
           <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
@@ -36,7 +35,7 @@
             </div>
           </form>
         </div>
-    </div>
+    <!-- </div> -->
 </div>
 </body>
 <script src="sub.js"></script>
