--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- Header -->
   <div class="header" id="myHeader">
     <h1>Hugs or Soup</h1>
-    <p> Slogannnnnnnnnnnnnn </p>
+    <p> Pls don't judge us, we're not done at all, thx bye </p>
   </div>
 
   <!-- Photo Grid -->
