--- a/meetTeam.html
+++ b/meetTeam.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="project-style.css"
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <script src="func.js"></script>
 <head>
 </head>
@@ -56,6 +58,31 @@
   </div>
 </nav>
 <h1>Meet Our Team!</h1>
+<h3>The Process</h3>
+<p>As a team we all worked on different tasks, but never maintained a set position throughout.
+  Our team worked really hard to incorporate all our ideas and overall we worked well together.
+  It was a very interesting project and we were excited to create a final product.</p>
+<h3>Brianna Mera</h3>
+<p>I volunteer a lot in my town and I love the feeling of helping others. I cannot
+  begin to express how thankful I am for everything I have. Our project has
+  the potential to give others access to the materials they need to have
+  the same experience. World hunger is a problem, but we need look in our counties first. </p>
+<h3>Mariam Dardir</h3>
+<p>I was driven to work on a project like this after watching news airing consequences
+  of world hunger in other countries. Many people all around the world lack food
+  that provide necessary nutrition, and the issue of world hunger is so prevalent
+  yet not publicized. I wanted to provide a platform that could
+  help raise awareness regarding this issue in my community, one county at a time.</p>
+<h3>Alice Chen</h3>
+<p>I liked the idea of helping people in need and getting others involved.
+  Raising awareness for a topic like hunger is so important; we need to start working
+  towards a real change. This project allows me to provide a website for people
+  to become informed and slowly begin a necessary process with my team.</p>
+<h3>Nishka Abraham</h3>
+<p>I wanted to work on this project, because I think people often overlook the
+  problems in their community. I’m so grateful to have the resources my family provides, so when Mariam came
+  up with this idea I was really inspired to help make something that would positively affect others.
+  Our platform could give others the tools to work towards the larger issue of world hunger by starting small.</p>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
