font size able to be changed (ex on org page)

--- a/organizationPage.html
+++ b/organizationPage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="func.js"></script>
+<!-- <script src="func.js"></script> -->
+<link rel="stylesheet" href="index.css"
 <head>
 </head>
 <body>
+<div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">HUGS or SOUP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +57,12 @@
     </form>
   </div>
 </nav>
-<div>
+</div>
+<button class= "sizeBtn"type="button" onclick="smallFunction()" id="smallText">A</button>
+<button class= "sizeBtn" type="button" onclick="mediumFunction()" id="mediumText">A</button>
+<button class= "sizeBtn" type="button" onclick="largeFunction()" id="largeText">A</button>
+<p >
+<div id="orgText">
 <h3>The Beacon at Bethany Lutheran Church </h3>
 <p>Bethany Lutheran provides assistance with food, clothing and social services.
   They also offer: fall flu shots, healthcare workshops, and social service updates.
@@ -104,9 +111,13 @@
   goal to eliminate hunger.(stjohnsjerseycity.net)</p>
 <h3>St. Joseph & Michael Food Pantry </h3>
 <p>St. Joseph and Michael Food Pantry is located in Mother Seton School.
-  They provide aid to many needy people based on donations. (ssjmuc.org)
+  They provide aid to many needy people based on donations. (ssjmuc.org) </p>
+
+</div>
+</p>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="index.js"> </script>
 </body>
 </html>
