org page with font changer and links to orgs

--- a/organizationPage.html
+++ b/organizationPage.html
@@ -58,60 +58,62 @@
   </div>
 </nav>
 </div>
+<div>
 <button class= "sizeBtn"type="button" onclick="smallFunction()" id="smallText">A</button>
 <button class= "sizeBtn" type="button" onclick="mediumFunction()" id="mediumText">A</button>
 <button class= "sizeBtn" type="button" onclick="largeFunction()" id="largeText">A</button>
+</div>
 <p >
 <div id="orgText">
-<h3>The Beacon at Bethany Lutheran Church </h3>
+<h3><a href="https://www.bethanyjc.com/" target= "_blank">The Beacon at Bethany Lutheran Church</a> </h3>
 <p>Bethany Lutheran provides assistance with food, clothing and social services.
   They also offer: fall flu shots, healthcare workshops, and social service updates.
   Their staff consists of volunteers and includes law enforcement officers, social workers,
   medical workers and childcare workers. All volunteers are welcome.
-  Additionally, volunteers are needed to help unload deliveries on Friday before the pantry opens. (bethanyjc.com)</p>
-<h3>The Hoboken Shelter </h3>
+  Additionally, volunteers are needed to help unload deliveries on Friday before the pantry opens.</p>
+<h3><a href="http://hobokenshelter.org/"target= "_blank">The Hoboken Shelter</a> </h3>
 <p>The Hoboken Shelter’s goal is to provide meals for the hungry and shelter for
   the homeless, while promoting a long term impact. They shelter 50 people every night,
   serve 500 meals everyday, and host 1,000 showers every week. Other support services they offer include
   case management, counseling, job and life skills training, creative arts workshops,
-  emergency homelessness prevention grants. (hobokenshelter.org)</p>
-<h3>Hunger Helpers - St.Lucy’s Shelter </h3>
-<p>St.Lucy’s is a 24 hour shelter open seven days a week for single men and women.
-  This shelter is located in Jersey City provides people with food and accepts volunteers too. (ccannj.com)</p>
-<h3>Marketplace </h3>
+  emergency homelessness prevention grants.</p>
+<h3><a href="http://www.ccannj.com/st_Lucy.php"target= "_blank">Hunger Helpers - St. Lucy’s Shelter</a> </h3>
+<p>St. Lucy’s is a 24 hour shelter open seven days a week for single men and women.
+  This shelter is located in Jersey City provides people with food and accepts volunteers too.</p>
+<h3><a href="http://marketplacejc.com/"target= "_blank">Marketplace</a></h3>
 <p>Marketplace in Jersey City is geared towards improving hunger within the
   community by providing an emergency food pantry to those in need.
-  Volunteers can help by doing work on Friday to prepare for distribution day on Saturday. (marketplacejc.com)</p>
-<h3>The Mary House Emergency Food Pantry of OLS </h3>
+  Volunteers can help by doing work on Friday to prepare for distribution day on Saturday.</p>
+<h3><a href="https://olsnj.org/food-pantry"target= "_blank">The Mary House Emergency Food Pantry of OLS</a> </h3>
 <p>The Mary House Emergency Food Pantry created by Our Lady of Sorrows Church has a mission to
   help families and individuals who need food. Emergencies can stem from unemployment, debt, robbery, or illness.
-  The church states, “It is our purpose to be a "life raft" until the emergency is past.” (olsnj.org)</p>
-<h3>North Hudson Community Action Corporation </h3>
+  The church states, “It is our purpose to be a "life raft" until the emergency is past.”</p>
+<h3><a href="https://nhcac.org/social-services-2-2/#squelch-taas-accordion-shortcode-content-8"target= "_blank">North Hudson Community Action Corporation</a> </h3>
 <p>The Hudson Community Action Corporation offers free food, meals, and groceries to people with low income.
-  Additionally, they help people apply for government assistance, and public aid. (nhcac.org)</p>
-<h3>Palisades Emergency Residence Corporation (PERC) </h3>
+  Additionally, they help people apply for government assistance, and public aid.</p>
+<h3><a href="http://www.percshelter.org/"target= "_blank">Palisades Emergency Residence Corporation (PERC)</a> </h3>
 <p>Palisades Emergency Residence Corporation aspires to end poverty,
   because they believe that food and shelter are basics human rights.
   PERC states, “that with help, there is hope. We believe that every person deserves dignity,
   respect and opportunity.” PERC provides emergency shelter, housing case management, support services, permanent
-  housing for chronically homeless individuals, community outreach, a soup kitchen and food pantry. (percshelter.org)</p>
-<h3>The Salvation Army Jersey City Corps </h3>
+  housing for chronically homeless individuals, community outreach, a soup kitchen and food pantry.</p>
+<h3><a href="https://newjersey.salvationarmy.org/NewJersey/jerseycity"target= "_blank">The Salvation Army Jersey City Corps</a> </h3>
 <p>They provide both church and social events for the community. While this organization
   is inclusive, it is geared towards people who live in Bayonne, Hoboken and Jersey City. Some events offered
-  are a thrift store, food pantry, Christmas and Thanksgiving meals as well as holiday gifts for children. (newjersey.salvationarmy.org)</p>
-<h3>The Salvation Army Kearny Corps </h3>
+  are a thrift store, food pantry, Christmas and Thanksgiving meals as well as holiday gifts for children.</p>
+<h3><a href="https://newjersey.salvationarmy.org/NewJersey/kearny"target= "_blank">The Salvation Army Kearny Corps</a> </h3>
 <p>The Salvation Army Kearny Corps has been making a difference in the community for over a century,
-  providing food, shelter, and other methods of assistance to people in need. (newjersey.salvationarmy.org)</p>
-<h3>The Sharing Place Food Pantry </h3>
+  providing food, shelter, and other methods of assistance to people in need.</p>
+<h3><a href="http://stpauljerseycity.org/stpaul/social-ministries/sharing-place/"target= "_blank">The Sharing Place Food Pantry</a> </h3>
 <p>The Sharing Place at St. Paul Lutheran Church prepares bags of groceries or ready-made meals to
   people who need assistance on the last two Saturdays of every month, from 8am - 12.
-  The organizations feeds around 6,000 families and individuals annually. (stpauljerseycity.org)</p>
-<h3>St.John’s Soup Kitchen </h3>
+  The organizations feeds around 6,000 families and individuals annually.</p>
+<h3><a href="http://www.stjohnsjerseycity.net/st.-john-s-food-pantry.html"target= "_blank">St. John’s Soup Kitchen</a> </h3>
 <p>St. John's Lutheran Church Food Pantry is located in Jersey City with a
   goal to eliminate hunger.(stjohnsjerseycity.net)</p>
-<h3>St. Joseph & Michael Food Pantry </h3>
+<h3><a href="http://ssjmuc.org/page24.html"target= "_blank">St. Joseph & Michael Food Pantry</a> </h3>
 <p>St. Joseph and Michael Food Pantry is located in Mother Seton School.
-  They provide aid to many needy people based on donations. (ssjmuc.org) </p>
+  They provide aid to many needy people based on donations.</p>
 
 </div>
 </p>
