Updated footer in files.

--- a/map.html
+++ b/map.html
@@ -5,6 +5,7 @@
 <head>
 <title>Leaflet Web Map</title>
 <link rel="stylesheet" href="map-style.css" />
+<link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
@@ -69,7 +70,10 @@
   <script src="imagegrid.js"></script>
 
     <div id="map"></div>
-
+    <div class="footer">
+      <small>SOUP Inc.</small><br>
+      <small>Updated 2018</small>
+    </div>
 </body>
 
 <script src="map.js"></script>
