--- a/club.html
+++ b/club.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="func.js"></script>
+<link rel="stylesheet" href="project-style.css">
+<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <head>
 </head>
 <body>
@@ -55,9 +57,20 @@
     </form>
   </div>
 </nav>
-<h1>This is our clubs page.</h1>
+<div class="margin">
+<h1>Clubs</h1>
+<h5>There are many clubs at school that you can participate in to support others
+  and volunteer for some of the various organizations we listed.
+  If you don’t have one then even better start one yourself!</h5>
+  <p>*If you want to get involved or start a world hunger club you can use our website as a resource to get started.</p>
+</div>
+<div class="footer">
+  <small>SOUP Inc.</small><br>
+  <small>Updated 2018</small>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="func.js"></script>
 </body>
 </html>
