--- a/meetTeam.html
+++ b/meetTeam.html
@@ -58,6 +58,13 @@
     </form>
   </div>
 </nav>
+<div>
+<button class= "sizeBtn"type="button" onclick="smallFunction()" id="smallText">A</button>
+<button class= "sizeBtn" type="button" onclick="mediumFunction()" id="mediumText">A</button>
+<button class= "sizeBtn" type="button" onclick="largeFunction()" id="largeText">A</button>
+</div>
+<p >
+<div id="sizeText">
 <h1>Meet Our Team!</h1>
 <h3>The Process</h3>
 <p>As a team we all worked on different tasks, but never maintained a set position throughout.
@@ -84,6 +91,8 @@
   problems in their community. I’m so grateful to have the resources my family provides, so when Mariam came
   up with this idea I was really inspired to help make something that would positively affect others.
   Our platform could give others the tools to work towards the larger issue of world hunger by starting small.</p>
+</div>
+</p>
   <div class="footer">
     <small>SOUP Inc.</small><br>
     <small>Updated 2018</small>
@@ -91,5 +100,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="index.js"></script>
 </body>
 </html>
