updated info pages with font changer buttons

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="index.css">
 <script src="func.js"></script>
 <head>
 </head>
@@ -55,11 +56,18 @@
     </form>
   </div>
 </nav>
+<div>
+<button class= "sizeBtn"type="button" onclick="smallFunction()" id="smallText">A</button>
+<button class= "sizeBtn" type="button" onclick="mediumFunction()" id="mediumText">A</button>
+<button class= "sizeBtn" type="button" onclick="largeFunction()" id="largeText">A</button>
+</div>
+<p>
+<div id="sizeText">
 <div class="questionForm">
 <h1>Our Contact Information:</h1>
-<h2>Email us at:</h2><h5>hugs_or_soup@gmail.com</h5>
-<h2>Call us at:</h2><h5>201-739-0783</h5>
-<h2>Follow our instagram page:</h2><h5>hugs_or_soup</h5>
+<h2>Email us at:</h2>hugs_or_soup@gmail.com
+<h2>Call us at:</h2>201-739-0783
+<h2>Follow our instagram page:</h2>hugs_or_soup
 <form>
 
   <div class="form-group">
@@ -74,6 +82,9 @@
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </div>
+</div>
+</p>
+<script src="index.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
