--- a/aboutPage.html
+++ b/aboutPage.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="func.js"></script>
 <head>
 </head>
+<style>
+
+.sizeBtn {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+	border-radius:45px;
+  float: right;
+
+}
+
+#smallText {
+    font-size:x-small;
+    font-weight:bold;
+}
+
+#mediumText {
+    font-size:medium;
+    font-weight:bold;
+}
+
+#largeText {
+    font-size:x-large;
+    font-weight:bold;
+}
+
+</style>
 <body>
+<div>
+<div class="navigationbar">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">HUGS or SOUP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,12 +77,21 @@
         <a class="nav-link disabled" href="contact.html">Contact</a>
       </li>
     </ul>
+    </div>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
 </nav>
+</div>
+<div>
+  <button class= "sizeBtn"type="button" onclick="smallFunction()" id="smallText">A</button>
+  <button class= "sizeBtn" type="button" onclick="mediumFunction()" id="mediumText">A</button>
+  <button class= "sizeBtn" type="button" onclick="largeFunction()" id="largeText">A</button>
+</div>
+<p>
+<div id="sizeText">
 <h1>Our Purpose</h1>
 <p>People go to sleep everyday without eating anything. We thought about what we could do to
   influence such a prevalent problem. As a group we felt that while people focus on the broad
@@ -67,8 +104,14 @@
   We want to get involved and hope that you will be interested in this cause as well.
   Rather than talking about the world we will start small with our communities
   and aspire to create change together. </p>
+
+</div>
+</p>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="index.js"></script>
 </body>
+
+<link rel="stylsheet" href="index.css">
 </html>
