--- a/club.html
+++ b/club.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="project-style.css">
-<link rel="stylesheet" href="index.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+<link rel="index.css">
 <head>
+  <style>
+
+  .sizeBtn {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+  	border-radius:45px;
+    float: right;
+
+  }
+
+  #smallText {
+      font-size:x-small;
+      font-weight:bold;
+  }
+
+  #mediumText {
+      font-size:medium;
+      font-weight:bold;
+  }
+
+  #largeText {
+      font-size:x-large;
+      font-weight:bold;
+  }
+
+  </style>
 </head>
 <body>
+<div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">HUGS or SOUP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,20 +83,31 @@
     </form>
   </div>
 </nav>
-<div class="margin">
+</div>
+<div>
+<button class= "sizeBtn"type="button" onclick="smallFunction()" id="smallText">A</button>
+<button class= "sizeBtn" type="button" onclick="mediumFunction()" id="mediumText">A</button>
+<button class= "sizeBtn" type="button" onclick="largeFunction()" id="largeText">A</button>
+</div>
+<p>
+<div id="sizeText">
 <h1>Clubs</h1>
-<h5>There are many clubs at school that you can participate in to support others
-  and volunteer for some of the various organizations we listed.
-  If you don’t have one then even better start one yourself!</h5>
-  <p>*If you want to get involved or start a world hunger club you can use our website as a resource to get started.</p>
+There are many clubs at school that you can participate in to support others and volunteer for some of the various organizations we listed. If you don’t have one then even better start one yourself!
+
+*If you want to get involved or start a world hunger club you can use our website as a resource to get started.
+
+Here are some example of clubs offered in the Hudson County Area:
+Lunch on Tuesdays(lots)
+Key club
+Generosity for Generations
+Student Council
+Hori Culture Club
+
 </div>
-<div class="footer">
-  <small>SOUP Inc.</small><br>
-  <small>Updated 2018</small>
-</div>
+</p>
+</body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="func.js"></script>
-</body>
+<script src="index.js"></script>
 </html>
