--- a/organizationPage.html
+++ b/organizationPage.html
@@ -2,7 +2,7 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- <script src="func.js"></script> -->
-<link rel="stylesheet" href="index.css"
+<link rel="stylesheet" href="index.css">
 <head>
 </head>
 <body>
@@ -64,7 +64,7 @@
 <button class= "sizeBtn" type="button" onclick="largeFunction()" id="largeText">A</button>
 </div>
 <p >
-<div id="orgText">
+<div id="sizeText">
 <h3><a href="https://www.bethanyjc.com/" target= "_blank">The Beacon at Bethany Lutheran Church</a> </h3>
 <p>Bethany Lutheran provides assistance with food, clothing and social services.
   They also offer: fall flu shots, healthcare workshops, and social service updates.
