--- a/aboutPage.html
+++ b/aboutPage.html
@@ -1,40 +1,14 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="index.css">
 <head>
 </head>
-<style>
-
-.sizeBtn {
-  width: 40px;
-  height: 40px;
-  text-align: center;
-	border-radius:45px;
-  float: right;
-
-}
-
-#smallText {
-    font-size:x-small;
-    font-weight:bold;
-}
-
-#mediumText {
-    font-size:medium;
-    font-weight:bold;
-}
-
-#largeText {
-    font-size:x-large;
-    font-weight:bold;
-}
-
-</style>
 <body>
 <div>
 <div class="navigationbar">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">HUGS or SOUP</a>
+  <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -78,10 +52,6 @@
       </li>
     </ul>
     </div>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 </div>
@@ -112,6 +82,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="index.js"></script>
 </body>
-
-<link rel="stylsheet" href="index.css">
 </html>
