--- a/club.html
+++ b/club.html
@@ -1,40 +1,13 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="index.css">
+<link rel="stylesheet" href="index.css">
 <head>
-  <style>
-
-  .sizeBtn {
-    width: 40px;
-    height: 40px;
-    text-align: center;
-  	border-radius:45px;
-    float: right;
-
-  }
-
-  #smallText {
-      font-size:x-small;
-      font-weight:bold;
-  }
-
-  #mediumText {
-      font-size:medium;
-      font-weight:bold;
-  }
-
-  #largeText {
-      font-size:x-large;
-      font-weight:bold;
-  }
-
-  </style>
 </head>
 <body>
 <div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">HUGS or SOUP</a>
+  <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -77,10 +50,6 @@
         <a class="nav-link disabled" href="contact.html">Contact</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 </div>
