--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
 <div class="navigationbar">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">HUGS or SOUP</a>
+  <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -54,17 +54,16 @@
         <a class="nav-link disabled" href="contact.html">Contact</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <div class="icons"> <a class="fas fa-envelope" href="mailto:helpsoup@gmail.com?Subject=%20" target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-instagram" href="https://www.instagram.com/soupincorporated/" target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" target="_top"></a> </div>
   </div>
 </nav>
 
   <!-- Header -->
   <div class="header" id="myHeader">
-    <h1>Hugs or Soup</h1>
-    <p> Pls don't judge us, we're not done at all, thx bye </p>
+    <h1>SOUP Inc.</h1>
+    <p> Serve Others, Unite People </p>
   </div>
 
   <!-- Photo Grid -->
@@ -239,17 +238,14 @@
         </form>
     </div>
 </div>
-<div class="footer">
-  <small>SOUP Inc.</small><br>
-  <small>Updated 2018</small>
 </div>
 </div>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="imagegrid.js"></script>
 <script scr="index.js"></script>
-<script src="func.js"></script>
 </body>
 
 </html>
