--- a/peerLead.html
+++ b/peerLead.html
@@ -3,36 +3,11 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="index.css">
 <head>
-<style>
-  .sizeBtn {
-    width: 40px;
-    height: 40px;
-    text-align: center;
-  	border-radius:45px;
-    float: right;
-
-  }
-
-  #smallText {
-      font-size:x-small;
-      font-weight:bold;
-  }
-
-  #mediumText {
-      font-size:medium;
-      font-weight:bold;
-  }
-
-  #largeText {
-      font-size:x-large;
-      font-weight:bold;
-  }
-</style>
 </head>
 <body>
 <div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">HUGS or SOUP</a>
+  <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -75,10 +50,6 @@
         <a class="nav-link disabled" href="contact.html">Contact</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 </div>
@@ -93,7 +64,7 @@
 Peer Leadership is an organization that empowers students to help out in their communities.
 Peer Leadership isn’t just a club to participate in, but it is a life experience that shows you and makes you appreciate everything that life gives you. Peer Leadership allows students to do some good and at the same time have fun with friends. It shows that as students we have great character and will lend a hand to someone in need. Peer Leadership started small, but now is nationwide in helping people and getting students involved.
 
-“We can make a difference and have fun doing it”. 
+“We can make a difference and have fun doing it”.
 </div>
 </p>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
