index with fixed spacing margins, added title pic

--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
     <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" target= "_blank"></a> </div>
   </div>
 </nav>
+</div>
 
   <!-- Header -->
   <div class="header" id="myHeader">
-    <h1>SOUP Inc.</h1>
+    <h1><img src="header3.gif"></h1>
     <p> Serve Others, Unite People </p>
   </div>
 
