--- a/aboutPage.html
+++ b/aboutPage.html
@@ -2,14 +2,12 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="index.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="facts-style.css">
 <head>
 </head>
 <body>
 <div>
 <div class="navigationbar">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
   <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -18,19 +16,20 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html"style="color:#e8f9f9">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" style="color:#e8f9f9"role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           About
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="howMuch.html">How Much Do You Know?</a>
           <a class="dropdown-item" href="aboutPage.html">Our Purpose</a>
           <a class="dropdown-item" href="meetTeam.html">Meet the Team</a>
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" style="color:#e8f9f9"role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Get Involved
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -41,7 +40,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"style="color:#e8f9f9" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Organizations
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -50,7 +49,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="contact.html">Contact</a>
+        <a class="nav-link disabled" href="contact.html"style="color:#e8f9f9">Contact</a>
       </li>
     </ul>
     </div>
@@ -79,53 +78,9 @@
 
 </div>
 </p>
-<div class="container">
-  <div class="mySlides">
-    <div class="numbertext">1 / 4</div>
-    <img src="sharingsoup.jpg">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">2 / 4</div>
-    <img src="hungrygirl.jpg">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">3 / 4</div>
-    <img src="homelesswoman.jpg">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">4 / 4</div>
-    <img src="soupkitchen.jpg">
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
-
-  <div class="caption-container">
-    <p id="caption"></p>
-  </div>
-
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="sharingsoup.jpg" style="width:100%" onclick="currentSlide(1)" alt="More than 1 million people in NJ are food insecure, which means they are unable to get enough healthy food for themselves and their families. ">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="hungrygirl.jpg" style="width:100%" onclick="currentSlide(2)" alt="1 out of every 3 people who are hungry in New Jersey is a child.">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="homelesswoman.jpg" style="width:100%" onclick="currentSlide(3)" alt=" 57% of households have to choose between food and housing.">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="soupkitchen.jpg" style="width:100%" onclick="currentSlide(4)" alt=" 84% of households with children purchase the cheapest food available, instead of the healthiest option, to provide enough food for their
-household">
-    </div>
-</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="index.js"></script>
-<script src="facts.js"></script>
 </body>
 </html>
