--- a/howMuch.html
+++ b/howMuch.html
@@ -2,6 +2,8 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="quiz-style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 </head>
 <body>
@@ -22,6 +24,8 @@
           About
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="howMuch.html">How Much Do You Know?</a>
+            <a class="dropdown-item" href="howMuch.html">Fun Facts</a>
           <a class="dropdown-item" href="aboutPage.html">Our Purpose</a>
           <a class="dropdown-item" href="meetTeam.html">Meet the Team</a>
         </div>
@@ -60,16 +64,16 @@
 </div>
 <p>
 <div id="sizeText">
-<h1>This is our Peer Leadership page.</h1>
-Peer Leadership is an organization that empowers students to help out in their communities.
-Peer Leadership isn’t just a club to participate in, but it is a life experience that shows you and makes you appreciate everything that life gives you. Peer Leadership allows students to do some good and at the same time have fun with friends. It shows that as students we have great character and will lend a hand to someone in need. Peer Leadership started small, but now is nationwide in helping people and getting students involved.
-
-“We can make a difference and have fun doing it”.
+<h1>How Much Do You Know?</h1>
+<div id="quiz"></div>
+<button id="submit">Get Results</button>
+<div id="results"></div>
 </div>
 </p>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="index.js"></script>
+<script src="quiz.js"></script>
 </body>
 </html>
