--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-<!-- start of favicon -->
-<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-<!-- end of favicon -->
 </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<title> SOUP </title>
 <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
 <div class="navigationbar">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
   <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -24,19 +19,21 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html"style="color:#e8f9f9">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" style="color:#e8f9f9" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           About
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="howMuch.html">How Much Do You Know?</a>
+          <a class="dropdown-item" href="howMuch.html">Fun Facts</a>
           <a class="dropdown-item" href="aboutPage.html">Our Purpose</a>
           <a class="dropdown-item" href="meetTeam.html">Meet the Team</a>
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" style="color:#e8f9f9"role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Get Involved
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -47,7 +44,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown navbar navbar-expand-lg navbar-secondary bg-secondary" style="color:#e8f9f9" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Organizations
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,19 +53,19 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="contact.html">Contact</a>
+        <a class="nav-link disabled" href="contact.html" style="color:#e8f9f9">Contact</a>
       </li>
     </ul>
-    <div class="icons"> <a class="fas fa-envelope" href="mailto:helpsoup@gmail.com?Subject=%20" target="_top"></a> </div>
-    <div class="icons"> <a class="fab fa-instagram" href="https://www.instagram.com/soupincorporated/" target= "_blank"></a> </div>
-    <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" target= "_blank"></a> </div>
+    <div class="icons"> <a class="fas fa-envelope" href="mailto:helpsoup@gmail.com?Subject=%20" style="color:#5c6377"target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-instagram" href="https://www.instagram.com/soupincorporated/"style="color:#5c6377" target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" style="color:#5c6377" target="_top"></a> </div>
   </div>
 </nav>
 </div>
 
   <!-- Header -->
   <div class="header" id="myHeader">
-    <h1><img src="header3.gif"></h1>
+    <h1>SOUP Inc.</h1>
     <p> Serve Others, Unite People </p>
   </div>
 
