Event to events

--- a/event.html
+++ b/event.html
@@ -63,7 +63,7 @@
 </div>
 <p>
 <div id="sizeText">
-<center><h1>Event</h1></center>
+<center><h1>Events</h1></center>
 </div>
 </p>
 <div="calendar">
