final files for webpage

--- a/club.html
+++ b/club.html
@@ -25,6 +25,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="howMuch.html">How Much Do You Know?</a>
+          <a class="dropdown-item" href="funFacts.html">Fun Facts</a>
           <a class="dropdown-item" href="aboutPage.html">Our Purpose</a>
           <a class="dropdown-item" href="meetTeam.html">Meet the Team</a>
         </div>
@@ -69,9 +70,9 @@
 <h1>Clubs</h1>
 There are many clubs at school that you can participate in to support others and volunteer for some of the various organizations we listed. If you don’t have one then even better start one yourself!
 
-*If you want to get involved or start a world hunger club you can use our website as a resource to get started.
+Please use our site as a resource to help our cause!
 
-Here are some example of clubs offered in the Hudson County Area:
+<p>Here are some example of clubs offered in the Hudson County Area:</p>
 Lunch on Tuesdays(lots)
 Key club
 Generosity for Generations
