--- a/getInvolvedPage.html
+++ b/getInvolvedPage.html
@@ -5,7 +5,7 @@
 <head>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="hugSoup.html">HUGS or SOUP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -13,13 +13,14 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-        <a class="nav-link" href="index.html"style="color:#e8f9f9">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="aboutPage.html"style="color:#e8f9f9">About</a>
+        <a class="nav-link" href="aboutPage.html">About</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="getInvolvedPage.html" id="navbarDropdown" style="color:#e8f9f9"role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="getInvolvedPage.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Get Involved
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -30,10 +31,10 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="organizationPage.html"style="color:#e8f9f9">Organizations</a>
+        <a class="nav-link disabled" href="organizationPage.html">Organizations</a>
       </li>
       <li class="nav-item">
-        <a class="active"class="nav-link disabled" href="contact.html"style="color:#e8f9f9">Contact</a>
+        <a class="nav-link disabled" href="contact.html">Contact</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
