--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="howMuch.html">How Much Do You Know?</a>
-          <a class="dropdown-item" href="howMuch.html">Fun Facts</a>
+          <a class="dropdown-item" href="funFacts.html">Fun Facts</a>
           <a class="dropdown-item" href="aboutPage.html">Our Purpose</a>
           <a class="dropdown-item" href="meetTeam.html">Meet the Team</a>
         </div>
