--- a/event.html
+++ b/event.html
@@ -6,6 +6,7 @@
 <head>
 </head>
 <body>
+  <title> Events </title>
 <nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
   <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,11 +19,12 @@
         <a class="nav-link" href="index.html"style="color:#e8f9f9">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"style="color:#e8f9f9" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" style="color:#e8f9f9" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           About
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="howMuch.html">How Much Do You Know?</a>
+          <a class="dropdown-item" href="funFacts.html">Fun Facts</a>
           <a class="dropdown-item" href="aboutPage.html">Our Purpose</a>
           <a class="dropdown-item" href="meetTeam.html">Meet the Team</a>
         </div>
@@ -66,9 +68,9 @@
 <center><h1>Events</h1></center>
 </div>
 </p>
-<div="calendar">
+<center><div="calendar">
  <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=helpsoup%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-</div>
+</div></center>
 <script src="cal.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
