--- a/funFacts.html
+++ b/funFacts.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <body>
+  <title> Fun Facts </title>
   <div class="navigationbar">
   <nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
     <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
@@ -26,7 +27,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="howMuch.html">How Much Do You Know?</a>
-            <a class="dropdown-item" href="howMuch.html">Fun Facts</a>
+            <a class="dropdown-item" href="funFacts.html">Fun Facts</a>
             <a class="dropdown-item" href="aboutPage.html">Our Purpose</a>
             <a class="dropdown-item" href="meetTeam.html">Meet the Team</a>
           </div>
@@ -61,7 +62,8 @@
     </div>
   </nav>
   </div>
-<h1>Fun Facts</h1>
+<div id="sizeText"> <h1>Fun Facts</h1> </div>
+    <div class="map">
     <img src="jersey.gif" usemap="#image-map" >
     <map name="image-map">
         <area target="" alt="Sussex" title="Sussex" onclick="pick(0)" coords="169,4,183,11,198,19,208,27,218,33,221,40,205,59,195,68,185,82,179,89,173,93,164,95,153,89,145,76,137,68,130,58,155,15" shape="poly">
@@ -86,9 +88,14 @@
         <area target="" alt="Cape May" title="Cape May"  onclick="pick(19)" coords="143,419,156,425,180,425,192,421,193,430,183,441,173,460,165,476,157,488,147,499,129,499,134,480,145,457,135,444,142,432" shape="poly">
         <area target="" alt="Hudson" title="Hudson"  onclick="pick(20)" coords="255,123,266,125,275,116,282,119,275,137,268,143,263,151,258,131,262,137" shape="poly">
     </map>
+  </div>
 
   <div id="display">
 </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="index.js"></script>
 <script src="hugs.js"></script>
 </html>
